began writing admm latex notebook

--- a/geological_segmentation/06-admm_results.ipynb
+++ b/geological_segmentation/06-admm_results.ipynb
@@ -1,6 +1,76 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Aleternating Direction Method of Multipliers (ADMM) for Solving DCIP with Segmentation\n",
+    "\n",
+    "To include segmentation into the geophysical inversion, we can form the functional generally as:\n",
+    "\n",
+    "$$\n",
+    "\\phi(\\mathbf{m}, \\mathbf{V}) = \\argmin_{\\mathbf{m}, \\mathbf{V}} \\phi_d(\\mathbf{m}) + \\alpha \\phi_m(\\mathbf{m}) + \\beta \\phi_V(\\mathbf{V}) + \\gamma \\phi_{\\mathbf{m}, \\mathbf{V}}(\\mathbf{m}, \\mathbf{V})\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "This allows us to minimize for $\\mathbf{m}$ and $\\mathbf{V}$ jointly. \n",
+    "\n",
+    "The model $\\mathbf{m}$ is size $1 \\times N_x N_z$\n",
+    "\n",
+    "And $\\mathbf{V}$ is size $N_c \\times N_x N_z$. Each column of $\\mathbf{V}$ is in the unit simplex,\n",
+    "\n",
+    "$$\n",
+    "C = \\left\\{ \\mathbf{V}_i \\in \\mathbb{R}^+ : \\sum_{j=1}^{N_c} V_{ij} = 1 \\right\\} \\quad \\forall i = 1,2,..., N_x N_z\n",
+    "$$\n",
+    "\n",
+    "$\\alpha, \\beta, \\gamma$ are the regularization parameters for balancing the contribution of each term to the unscaled $\\phi_d$ term\n",
+    "\n",
+    "The **data misfit** term $\\phi_d$ is the data misfit which for the non-linear DC problem is,\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{2} \\| F(\\mathbf{m}) - d_{obs} \\|_2^2\n",
+    "$$\n",
+    "\n",
+    "where $F(\\mathbf{m})$ is the non-linear mapping from model space to the data space.\n",
+    "\n",
+    "The **model norm** term $\\phi_m$ is the model norm which for operates on the model vector $\\mathbf{m}$, often considering either the gradients or how close the model is to a reference model.\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{2} \\| \\mathbf{m} - \\mathbf{m}_{ref} \\|_2^2\n",
+    "$$\n",
+    "\n",
+    "or\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{2} \\| \\nabla \\mathbf{m} \\|_2^2\n",
+    "$$\n",
+    "\n",
+    "or Total variation is also common\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{2} \\| \\nabla \\mathbf{m} \\|_2^1\n",
+    "$$\n",
+    "\n",
+    "or any combination of the above forms\n",
+    "\n",
+    "\n",
+    "where $F(\\mathbf{m})$ is the non-linear mapping from model space to the data space.\n",
+    "\n",
+    "The **Blockiness of the segmentated model** $\\phi_V$ operates on the segmentation model to minimize each class $c_j$. This is done often by the measure of each classes perimeter length. Commonly this measure is done by calculating the sum of each class's Total Variation,\n",
+    "\n",
+    "$$\n",
+    "\\phi_V = \\frac{1}{2} \\| \\nabla \\mathbf{V} \\|_2^1\n",
+    "$$\n",
+    "\n",
+    "The last term the **segmentation norm** $\\phi_{m,V}$ drives both the geophysical model and the segmentation model towards each class centroid by,\n",
+    "\n",
+    "$$\n",
+    "\\phi_{m,V} = \\sum_{j=1}^{N_c} \\sum_{i=1}^{N_x N_z} V_{ji} (m_i - c_j)^2\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
