--- a/geological_segmentation/06-admm_results.ipynb
+++ b/geological_segmentation/06-admm_results.ipynb
@@ -6,11 +6,13 @@
    "source": [
     "# Aleternating Direction Method of Multipliers (ADMM) for Solving DCIP with Segmentation\n",
     "\n",
-    "To include segmentation into the geophysical inversion, we can form the functional generally as:\n",
+    "To include segmentation into the geophysical inversion, we can form the functional generally as,\n",
     "\n",
     "$$\n",
-    "\\phi(\\mathbf{m}, \\mathbf{V}) = \\argmin_{\\mathbf{m}, \\mathbf{V}} \\phi_d(\\mathbf{m}) + \\alpha \\phi_m(\\mathbf{m}) + \\beta \\phi_V(\\mathbf{V}) + \\gamma \\phi_{\\mathbf{m}, \\mathbf{V}}(\\mathbf{m}, \\mathbf{V})\n",
+    "\\phi(\\mathbf{m}, \\mathbf{Z}) = \\argmin_{\\mathbf{m}, \\mathbf{Z}} \\phi_d(\\mathbf{m}) + \\alpha \\phi_m(\\mathbf{m}) + \\beta \\phi_Z(\\mathbf{Z}) + \\gamma \\phi_{\\mathbf{m}, \\mathbf{Z}}(\\mathbf{m}, \\mathbf{Z})\n",
     "$$\n",
+    "\n",
+    "(https://doi.org/10.1093/gji/ggab388)\n",
     "\n",
     "\n",
     "This allows us to minimize for $\\mathbf{m}$ and $\\mathbf{V}$ jointly. \n",
@@ -59,15 +61,58 @@
     "The **Blockiness of the segmentated model** $\\phi_V$ operates on the segmentation model to minimize each class $c_j$. This is done often by the measure of each classes perimeter length. Commonly this measure is done by calculating the sum of each class's Total Variation,\n",
     "\n",
     "$$\n",
-    "\\phi_V = \\frac{1}{2} \\| \\nabla \\mathbf{V} \\|_2^1\n",
+    "\\phi_V = \\frac{1}{2} \\| \\nabla \\mathbf{Z} \\|_2^1\n",
     "$$\n",
     "\n",
-    "The last term the **segmentation norm** $\\phi_{m,V}$ drives both the geophysical model and the segmentation model towards each class centroid by,\n",
+    "The last term the **segmentation norm** $\\phi_{m,Z}$ drives both the geophysical model and the segmentation model towards each class centroid by,\n",
     "\n",
     "$$\n",
-    "\\phi_{m,V} = \\sum_{j=1}^{N_c} \\sum_{i=1}^{N_x N_z} V_{ji} (m_i - c_j)^2\n",
+    "\\phi_{m,Z} = \\sum_{j=1}^{N_c} \\sum_{i=1}^{N_x N_z} Z_{ji} (m_i - c_j)^2\n",
     "$$\n",
-    "\n"
+    "\n",
+    "If we can state the problems as,\n",
+    "\n",
+    "$$\n",
+    "\\argmin_{\\mathbf{m}, \\mathbf{Z}} = \\Phi(\\mathbf{m}) + R(\\mathbf{Z}), \\quad s.t \\ (\\mathbf{m} - \\mathbf{Z}) = 0\n",
+    "$$\n",
+    "\n",
+    "and according to Boyld, 2010, ADMM solves the above equation iteravilet alternating between updates of $\\mathbf{m}$ and $\\mathbf{Z}$ as,\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{m}^{k+1} = \\argmin_{\\mathbf{m}} \\left( \\Phi(\\mathbf{m}) + \\frac{1}{2\\lambda} \\| \\mathbf{m} - \\mathbf{Z}^{k} + u^{k} \\|_2^2 \\right)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{Z}^{k+1} = \\argmin_{\\mathbf{m}} \\left( R(\\mathbf{Z}) + \\frac{1}{2\\lambda} \\| \\mathbf{m}^{k+1} - \\mathbf{Z} + u^{k} \\|_2^2 \\right)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "u^{k+1} = u^k + (\\mathbf{m}^{k+1} - \\mathbf{Z}^{k+1})\n",
+    "$$\n",
+    "\n",
+    "We can write the segmentation addition to the inversion as,\n",
+    "\n",
+    "$$\n",
+    "\\Phi(\\mathbf{m}) = \\phi_m(\\mathbf{m} ) + \\alpha \\phi_m(\\mathbf{m})\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "R(\\mathbf{Z}) = \\beta \\phi_Z(\\mathbf{Z}) + \\gamma \\phi_{\\mathbf{m}, \\mathbf{Z}}(\\mathbf{Z}) \\quad where\\ \\mathbf{m}\\ is\\ constant\n",
+    "$$\n",
+    "\n",
+    "The augmented Lagrangian for the ADMM formulation is then,\n",
+    "\n",
+    "$$\n",
+    "\\argmin_{\\mathbf{m}, \\mathbf{Z}, \\mathbf{y}} \\Phi(\\mathbf{m}) + R(\\mathbf{Z}) + \\mathbf{y}^T(\\mathbf{m} - \\mathbf{Z}) + \\frac{1}{2\\lambda} \\| \\mathbf{m} - \\mathbf{Z} \\|_2^2\n",
+    "$$\n",
+    "\n",
+    "letting $\\mathbf{u} = \\lambda \\mathbf{y}$ the above simplifies to,\n",
+    "\n",
+    "$$\n",
+    "\\argmin_{\\mathbf{m}, \\mathbf{Z}, \\mathbf{y}} \\Phi(\\mathbf{m}) + R(\\mathbf{Z}) + \\frac{1}{2\\lambda} \\| \\mathbf{m} - \\mathbf{Z} + \\mathbf{u} \\|_2^2\n",
+    "$$"
    ]
   },
   {
