updates to admm-segmentation notes

--- a/geological_segmentation/06-admm_results.ipynb
+++ b/geological_segmentation/06-admm_results.ipynb
@@ -19,10 +19,10 @@
     "\n",
     "The model $\\mathbf{m}$ is size $1 \\times N_x N_z$\n",
     "\n",
-    "And $\\mathbf{V}$ is size $N_c \\times N_x N_z$. Each column of $\\mathbf{V}$ is in the unit simplex,\n",
+    "And $\\mathbf{Z}$ is size $N_c \\times N_x N_z$. Each column of $\\mathbf{Z}$ is in the unit simplex,\n",
     "\n",
     "$$\n",
-    "C = \\left\\{ \\mathbf{V}_i \\in \\mathbb{R}^+ : \\sum_{j=1}^{N_c} V_{ij} = 1 \\right\\} \\quad \\forall i = 1,2,..., N_x N_z\n",
+    "C = \\left\\{ \\mathbf{Z}_i \\in \\mathbb{R}^+ : \\sum_{j=1}^{N_c} z_{ij} = 1 \\right\\} \\quad \\forall i = 1,2,..., N_x N_z\n",
     "$$\n",
     "\n",
     "$\\alpha, \\beta, \\gamma$ are the regularization parameters for balancing the contribution of each term to the unscaled $\\phi_d$ term\n",
@@ -58,10 +58,10 @@
     "\n",
     "where $F(\\mathbf{m})$ is the non-linear mapping from model space to the data space.\n",
     "\n",
-    "The **Blockiness of the segmentated model** $\\phi_V$ operates on the segmentation model to minimize each class $c_j$. This is done often by the measure of each classes perimeter length. Commonly this measure is done by calculating the sum of each class's Total Variation,\n",
+    "The **Blockiness of the segmentated model** $\\phi_Z$ operates on the segmentation model to minimize each class $c_j$. This is done often by the measure of each classes perimeter length. Commonly this measure is done by calculating the sum of each class's Total Variation,\n",
     "\n",
     "$$\n",
-    "\\phi_V = \\frac{1}{2} \\| \\nabla \\mathbf{Z} \\|_2^1\n",
+    "\\phi_Z = \\frac{1}{2} \\| \\nabla \\mathbf{Z} \\|_2^1\n",
     "$$\n",
     "\n",
     "The last term the **segmentation norm** $\\phi_{m,Z}$ drives both the geophysical model and the segmentation model towards each class centroid by,\n",
@@ -117,7 +117,7 @@
     "The full Lagrangian,\n",
     "\n",
     "$$\n",
-    "\\mathcal{L}(\\mathbf{m}, \\mathbf{Z}, \\mathbf{u}) = \\frac{1}{2} \\| F(\\mathbf{m}) - d_{obs} \\|_2^2 + \\frac{\\alpha}{2} \\| \\nabla \\mathbf{Z} \\|_2^1 + \\beta \\sum_{j=1}^{N_c} \\sum_{i=1}^{N_x N_z} Z_{ji} (m_i - c_j)^2 + \\frac{\\gamma}{2\\lambda} \\| \\mathbf{m} - \\mathbf{Z} + \\mathbf{u} \\|_2^2\n",
+    "\\mathcal{L}(\\mathbf{m}, \\mathbf{Z}, \\mathbf{u}) = \\frac{1}{2} \\| F(\\mathbf{m}) - d_{obs} \\|_2^2 + \\frac{\\alpha}{2} \\| \\nabla \\mathbf{Z} \\|_2^1 + \\beta \\sum_{j=1}^{N_c} \\sum_{i=1}^{N_x N_z} Z_{ji} (m_i - c_j)^2 + \\frac{\\gamma}{\\lambda} \\| \\mathbf{m} - \\mathbf{Z} + \\mathbf{u} \\|_2^2\n",
     "$$\n",
     "\n",
     "This looks a bit gnarly but its simplifies nicely into a unsupervised segmentation method for the minimization of the $\\mathbf{Z}$ variable. First lets form our ADMM functionals:\n",
@@ -133,11 +133,11 @@
     "The ADMM steps are:\n",
     "\n",
     "$$\n",
-    "\\mathbf{m}^{k+1} = \\argmin_{\\mathbf{m}} \\frac{1}{2} \\| F(\\mathbf{m}) - d_{obs} \\|_2^2 + \\frac{\\gamma}{2\\lambda} \\| \\mathbf{m} - \\mathbf{Z}^{k -1} + \\mathbf{u}^{k -1} \\|_2^2 \n",
+    "\\mathbf{m}^{k+1} = \\argmin_{\\mathbf{m}} \\frac{1}{2} \\| F(\\mathbf{m}) - d_{obs} \\|_2^2 + \\frac{\\gamma}{2\\lambda} \\| \\mathbf{m} - \\mathbf{Z}^k + \\mathbf{u}^k \\|_2^2 \n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\mathbf{Z}^{k+1} = \\beta \\sum_{j=1}^{N_c} \\sum_{i=1}^{N_x N_z} Z_{ji} (m_i^{k +1} - c_j)^2 + \\frac{\\gamma}{2\\lambda} \\| \\mathbf{m}^{k +1} - \\mathbf{Z} + \\mathbf{u}^{k -1} \\|_2^2 + \\frac{\\alpha}{2} \\| \\nabla \\mathbf{Z} \\|_2^1\n",
+    "\\mathbf{Z}^{k+1} = \\argmin_{\\mathbf{Z}} \\beta \\sum_{j=1}^{N_c} \\sum_{i=1}^{N_x N_z} Z_{ji} (m_i^{k +1} - c_j)^2 + \\frac{\\gamma}{2\\lambda} \\| \\mathbf{m}^{k +1} - \\mathbf{Z} + \\mathbf{u}^{k} \\|_2^2 + \\frac{\\alpha}{2} \\| \\nabla \\mathbf{Z} \\|_2^1\n",
     "$$\n",
     "\n",
     "$$\n",
