added text for ADMM and Prox Op & more ip mcdermont with geoseg & mods to geosegmentation lib

--- a/geological_segmentation/06-admm_results.ipynb
+++ b/geological_segmentation/06-admm_results.ipynb
@@ -4,6 +4,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Alternating Direction Method of Multipliers (ADMM)\n",
+    "\n",
+    "ADMM is used to solve constrained optimization problems using a variant of the augmented Lagragian. The scheme uses partial updates for dual variables. The method solves problems of the form:\n",
+    "\n",
+    "$$\n",
+    "\\argmin_x f(x) + g(x)\n",
+    "$$\n",
+    "\n",
+    "Which is equivalent to the contrained problem\n",
+    "\n",
+    "$$\n",
+    "\\argmin_x f(x) + g(z), \\ s.t \\ x=z\n",
+    "$$\n",
+    "\n",
+    "The optimization is then setup to take a step in the **x** space and then takes a step in the auxhilary space **z**. Thirdly, the accumulated error is captured in the Lagragian variable shared by both steps. (more on this later)\n",
+    "\n",
+    "Our Lagrangian to solve is then:\n",
+    "\n",
+    "# Proximal Operators\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\"... proximal algorithms, for solving convex optimization problems. Much like Newton’s method is a standard tool for solving unconstrained smooth minimization problems of modest size, proximal algorithms can be viewed as an analogous tool for nonsmooth, constrained, large-scale, or distributed versions of these problems\"\n",
+    "\n",
+    "```\n",
+    "\n",
+    "(Parikh, 2014)\n",
+    "\n",
+    "The definition of a proximal operator is:\n",
+    "\n",
+    "Let $f: \\mathbb{R}^{n} \\to \\mathbb{R} \\in \\{+ \\infty\\}$ be a closed convex function and its `epigraph` is a non empty set. (an epigraph of a function is a set representing all the points on or above the graph of a function.) We then have an effective domain of $\\mathbf{f}$ that is a set of points for which $\\mathbf{f}$ takes on finite values. The proximal operator $\\mathrm{prox}_{f}: \\mathbb{R}^{n} \\to \\mathbb{R}^n$ of $\\mathbf{f}$ is defined by\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{prox}_{\\lambda f}(z) = \\arg\\min_y \\left( f(x) + \\frac{1}{2\\lambda} \\| x - z \\|^2 \\right)\n",
+    "$$\n",
+    "\n",
+    "Looks familiar right? Proximal operators can simplfy our steps in ADMM. For example lets look at how an L1 norm's proximal operator becomes a simple thresholding function evaluation.\n",
+    "\n",
+    "The $\\|L1\\|$ norm is defined as:\n",
+    "$$\\[\n",
+    "\\|x\\|_1 = \\sum_{i=1}^n |x_i|\n",
+    "\\]$$\n",
+    "\n",
+    "The proximal operator for a function $\\|f(x)\\|$ is defined as:\n",
+    "\\[\n",
+    "\\text{prox}_{\\lambda f}(v) = \\arg \\min_{x} \\left( \\frac{1}{2} \\|x - v\\|_2^2 + \\lambda f(x) \\right)\n",
+    "\\]\n",
+    "\n",
+    "For the \\(L1\\) norm, we have \\(f(x) = \\|x\\|_1\\), and the proximal operator becomes:\n",
+    "\\[\n",
+    "\\text{prox}_{\\lambda \\| \\cdot \\|_1}(v) = \\arg \\min_{x} \\left( \\frac{1}{2} \\|x - v\\|_2^2 + \\lambda \\|x\\|_1 \\right)\n",
+    "\\]\n",
+    "\n",
+    "Let's break this down step-by-step:\n",
+    "\n",
+    "1. **Objective Function**:\n",
+    "\n",
+    "   The objective function we want to minimize is:\n",
+    "   \\[\n",
+    "   \\frac{1}{2} \\|x - v\\|_2^2 + \\lambda \\|x\\|_1 = \\frac{1}{2} \\sum_{i=1}^n (x_i - v_i)^2 + \\lambda \\sum_{i=1}^n |x_i|\n",
+    "   \\]\n",
+    "\n",
+    "2. **Decompose by Components**:\n",
+    "\n",
+    "   Notice that the objective function can be decomposed into a sum of independent terms for each component \\(x_i\\):\n",
+    "   \\[\n",
+    "   \\sum_{i=1}^n \\left( \\frac{1}{2} (x_i - v_i)^2 + \\lambda |x_i| \\right)\n",
+    "   \\]\n",
+    "   Hence, we can minimize each term separately for each \\(x_i\\):\n",
+    "   \\[\n",
+    "   \\min_{x_i} \\left( \\frac{1}{2} (x_i - v_i)^2 + \\lambda |x_i| \\right)\n",
+    "   \\]\n",
+    "\n",
+    "3. **Case Analysis**:\n",
+    "\n",
+    "   To solve this minimization problem, we need to consider the subdifferential of the \\(L1\\) norm. The subdifferential of \\(|x_i|\\) is:\n",
+    "   \\[\n",
+    "   \\partial |x_i| =\n",
+    "   \\begin{cases} \n",
+    "   \\{-1\\} & \\text{if } x_i < 0 \\\\\n",
+    "   [-1, 1] & \\text{if } x_i = 0 \\\\\n",
+    "   \\{1\\} & \\text{if } x_i > 0 \n",
+    "   \\end{cases}\n",
+    "   \\]\n",
+    "\n",
+    "4. **First-Order Optimality Condition**:\n",
+    "\n",
+    "   For optimality, the derivative (or subgradient) of the objective function should be zero:\n",
+    "   \\[\n",
+    "   x_i - v_i + \\lambda \\partial |x_i| = 0\n",
+    "   \\]\n",
+    "\n",
+    "   We analyze this for different cases of \\(x_i\\):\n",
+    "\n",
+    "   - **Case 1: \\(x_i > 0\\)**:\n",
+    "     \\[\n",
+    "     x_i - v_i + \\lambda = 0 \\implies x_i = v_i - \\lambda\n",
+    "     \\]\n",
+    "     Since \\(x_i > 0\\), we need \\(v_i > \\lambda\\).\n",
+    "\n",
+    "   - **Case 2: \\(x_i < 0\\)**:\n",
+    "     \\[\n",
+    "     x_i - v_i - \\lambda = 0 \\implies x_i = v_i + \\lambda\n",
+    "     \\]\n",
+    "     Since \\(x_i < 0\\), we need \\(v_i < -\\lambda\\).\n",
+    "\n",
+    "   - **Case 3: \\(x_i = 0\\)**:\n",
+    "     \\[\n",
+    "     -\\lambda \\leq v_i \\leq \\lambda\n",
+    "     \\]\n",
+    "     Here, \\(x_i\\) remains 0 if \\(v_i\\) is within \\([- \\lambda, \\lambda]\\).\n",
+    "\n",
+    "5. **Combining the Cases**:\n",
+    "\n",
+    "   Combining these conditions, we get the soft thresholding operator:\n",
+    "   \\[\n",
+    "   x_i = \n",
+    "   \\begin{cases} \n",
+    "   v_i - \\lambda & \\text{if } v_i > \\lambda \\\\\n",
+    "   0 & \\text{if } |v_i| \\leq \\lambda \\\\\n",
+    "   v_i + \\lambda & \\text{if } v_i < -\\lambda \n",
+    "   \\end{cases}\n",
+    "   \\]\n",
+    "\n",
+    "   This can be succinctly written using the sign function as:\n",
+    "   \\[\n",
+    "   x_i = \\text{sign}(v_i) \\max(|v_i| - \\lambda, 0)\n",
+    "   \\]\n",
+    "\n",
+    "6. **Proximal Operator Definition**:\n",
+    "\n",
+    "   Therefore, the proximal operator for the \\(L1\\) norm is given by the soft thresholding function:\n",
+    "   \\[\n",
+    "   \\text{prox}_{\\lambda \\| \\cdot \\|_1}(v) = \\text{sign}(v) \\max(|v| - \\lambda, 0)\n",
+    "   \\]\n",
+    "\n",
+    "This derivation shows that the proximal operator for the \\(L1\\) norm indeed corresponds to a thresholding function, often referred to as the soft thresholding function.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Aleternating Direction Method of Multipliers (ADMM) for Solving DCIP with Segmentation\n",
     "\n",
     "To include segmentation into the geophysical inversion, we can form the functional generally as,\n",
