--- a/geological_segmentation/06-admm_results.ipynb
+++ b/geological_segmentation/06-admm_results.ipynb
@@ -20,7 +20,13 @@
     "\n",
     "The optimization is then setup to take a step in the **x** space and then takes a step in the auxhilary space **z**. Thirdly, the accumulated error is captured in the Lagragian variable shared by both steps. (more on this later)\n",
     "\n",
-    "Our Lagrangian to solve is then:\n",
+    "ADMM solves the constrained optimization problem using a Lagrangian:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L}(\\mathbf{x}, \\mathbf{z}, \\mathbf{y}) = f(\\mathbf{x}) + g(\\mathbf{z}) + \\mathbf{y}^T(\\mathbf{x} - \\mathbf{z}) + \\frac{1}{2\\lambda} \\| \\mathbf{x} - \\mathbf{z} \\|_2^2\n",
+    "$$\n",
+    "\n",
+    "which is solved in three steps,\n",
     "\n",
     "# Proximal Operators\n",
     "\n",
@@ -34,7 +40,7 @@
     "\n",
     "The definition of a proximal operator is:\n",
     "\n",
-    "Let $f: \\mathbb{R}^{n} \\to \\mathbb{R} \\in \\{+ \\infty\\}$ be a closed convex function and its `epigraph` is a non empty set. (an epigraph of a function is a set representing all the points on or above the graph of a function.) We then have an effective domain of $\\mathbf{f}$ that is a set of points for which $\\mathbf{f}$ takes on finite values. The proximal operator $\\mathrm{prox}_{f}: \\mathbb{R}^{n} \\to \\mathbb{R}^n$ of $\\mathbf{f}$ is defined by\n",
+    "Let $f: \\mathbb{R}^{n} \\to \\mathbb{R} \\in \\{+ \\infty\\}$ be a closed convex function and its `epigraph` is a non empty set. (an epigraph of a function is a set representing all the points on or above the graph of a function.) We then have an effective domain of $\\mathcal{f}$ that is a set of points for which $\\mathcal{f}$ takes on finite values. The proximal operator $\\mathrm{prox}_{f}: \\mathbb{R}^{n} \\to \\mathbb{R}^n$ of $\\mathcal{f}$ is defined by\n",
     "\n",
     "$$\n",
     "\\mathrm{prox}_{\\lambda f}(z) = \\arg\\min_y \\left( f(x) + \\frac{1}{2\\lambda} \\| x - z \\|^2 \\right)\n",
@@ -42,105 +48,103 @@
     "\n",
     "Looks familiar right? Proximal operators can simplfy our steps in ADMM. For example lets look at how an L1 norm's proximal operator becomes a simple thresholding function evaluation.\n",
     "\n",
-    "The $\\|L1\\|$ norm is defined as:\n",
-    "$$\\[\n",
+    "The L1 norm is defined as:\n",
+    "$$\n",
     "\\|x\\|_1 = \\sum_{i=1}^n |x_i|\n",
-    "\\]$$\n",
+    "$$\n",
     "\n",
-    "The proximal operator for a function $\\|f(x)\\|$ is defined as:\n",
-    "\\[\n",
+    "The proximal operator for a function $f(x)$ is defined as:\n",
+    "$$\n",
     "\\text{prox}_{\\lambda f}(v) = \\arg \\min_{x} \\left( \\frac{1}{2} \\|x - v\\|_2^2 + \\lambda f(x) \\right)\n",
-    "\\]\n",
+    "$$\n",
     "\n",
-    "For the \\(L1\\) norm, we have \\(f(x) = \\|x\\|_1\\), and the proximal operator becomes:\n",
-    "\\[\n",
+    "For the L1 norm, we have $f(x) = \\|x\\|_1$, and the proximal operator becomes:\n",
+    "$$\n",
     "\\text{prox}_{\\lambda \\| \\cdot \\|_1}(v) = \\arg \\min_{x} \\left( \\frac{1}{2} \\|x - v\\|_2^2 + \\lambda \\|x\\|_1 \\right)\n",
-    "\\]\n",
+    "$$\n",
     "\n",
     "Let's break this down step-by-step:\n",
     "\n",
     "1. **Objective Function**:\n",
     "\n",
     "   The objective function we want to minimize is:\n",
-    "   \\[\n",
+    "   $$\n",
     "   \\frac{1}{2} \\|x - v\\|_2^2 + \\lambda \\|x\\|_1 = \\frac{1}{2} \\sum_{i=1}^n (x_i - v_i)^2 + \\lambda \\sum_{i=1}^n |x_i|\n",
-    "   \\]\n",
+    "   $$\n",
     "\n",
     "2. **Decompose by Components**:\n",
     "\n",
-    "   Notice that the objective function can be decomposed into a sum of independent terms for each component \\(x_i\\):\n",
-    "   \\[\n",
+    "   Notice that the objective function can be decomposed into a sum of independent terms for each component $x_i$:\n",
+    "   $$\n",
     "   \\sum_{i=1}^n \\left( \\frac{1}{2} (x_i - v_i)^2 + \\lambda |x_i| \\right)\n",
-    "   \\]\n",
-    "   Hence, we can minimize each term separately for each \\(x_i\\):\n",
-    "   \\[\n",
+    "   $$\n",
+    "   Hence, we can minimize each term separately for each $x_i$:\n",
+    "   $$\n",
     "   \\min_{x_i} \\left( \\frac{1}{2} (x_i - v_i)^2 + \\lambda |x_i| \\right)\n",
-    "   \\]\n",
+    "   $$\n",
     "\n",
     "3. **Case Analysis**:\n",
     "\n",
-    "   To solve this minimization problem, we need to consider the subdifferential of the \\(L1\\) norm. The subdifferential of \\(|x_i|\\) is:\n",
-    "   \\[\n",
+    "   To solve this minimization problem, we need to consider the subdifferential of the L1 norm. The subdifferential of $|x_i|$ is:\n",
+    "   $$\n",
     "   \\partial |x_i| =\n",
     "   \\begin{cases} \n",
     "   \\{-1\\} & \\text{if } x_i < 0 \\\\\n",
     "   [-1, 1] & \\text{if } x_i = 0 \\\\\n",
     "   \\{1\\} & \\text{if } x_i > 0 \n",
     "   \\end{cases}\n",
-    "   \\]\n",
+    "   $$\n",
     "\n",
     "4. **First-Order Optimality Condition**:\n",
     "\n",
     "   For optimality, the derivative (or subgradient) of the objective function should be zero:\n",
-    "   \\[\n",
+    "   $$\n",
     "   x_i - v_i + \\lambda \\partial |x_i| = 0\n",
-    "   \\]\n",
+    "   $$\n",
     "\n",
-    "   We analyze this for different cases of \\(x_i\\):\n",
+    "   We analyze this for different cases of $x_i$:\n",
     "\n",
-    "   - **Case 1: \\(x_i > 0\\)**:\n",
-    "     \\[\n",
+    "   - **Case 1: $x_i > 0$**:\n",
+    "     $$\n",
     "     x_i - v_i + \\lambda = 0 \\implies x_i = v_i - \\lambda\n",
-    "     \\]\n",
-    "     Since \\(x_i > 0\\), we need \\(v_i > \\lambda\\).\n",
+    "     $$\n",
+    "     Since $x_i > 0$, we need $v_i > \\lambda$.\n",
     "\n",
-    "   - **Case 2: \\(x_i < 0\\)**:\n",
-    "     \\[\n",
+    "   - **Case 2: $x_i < 0$**:\n",
+    "     $$\n",
     "     x_i - v_i - \\lambda = 0 \\implies x_i = v_i + \\lambda\n",
-    "     \\]\n",
-    "     Since \\(x_i < 0\\), we need \\(v_i < -\\lambda\\).\n",
+    "     $$\n",
+    "     Since $x_i < 0$, we need $v_i < -\\lambda$.\n",
     "\n",
-    "   - **Case 3: \\(x_i = 0\\)**:\n",
-    "     \\[\n",
+    "   - **Case 3: $x_i = 0$**:\n",
+    "     $$\n",
     "     -\\lambda \\leq v_i \\leq \\lambda\n",
-    "     \\]\n",
-    "     Here, \\(x_i\\) remains 0 if \\(v_i\\) is within \\([- \\lambda, \\lambda]\\).\n",
+    "     $$\n",
+    "     Here, $x_i$ remains 0 if $v_i$ is within $[- \\lambda, \\lambda]$.\n",
     "\n",
     "5. **Combining the Cases**:\n",
     "\n",
     "   Combining these conditions, we get the soft thresholding operator:\n",
-    "   \\[\n",
+    "   $$\n",
     "   x_i = \n",
     "   \\begin{cases} \n",
     "   v_i - \\lambda & \\text{if } v_i > \\lambda \\\\\n",
     "   0 & \\text{if } |v_i| \\leq \\lambda \\\\\n",
     "   v_i + \\lambda & \\text{if } v_i < -\\lambda \n",
     "   \\end{cases}\n",
-    "   \\]\n",
+    "   $$\n",
     "\n",
     "   This can be succinctly written using the sign function as:\n",
-    "   \\[\n",
+    "   $$\n",
     "   x_i = \\text{sign}(v_i) \\max(|v_i| - \\lambda, 0)\n",
-    "   \\]\n",
+    "   $$\n",
     "\n",
     "6. **Proximal Operator Definition**:\n",
     "\n",
     "   Therefore, the proximal operator for the \\(L1\\) norm is given by the soft thresholding function:\n",
-    "   \\[\n",
+    "   $$\n",
     "   \\text{prox}_{\\lambda \\| \\cdot \\|_1}(v) = \\text{sign}(v) \\max(|v| - \\lambda, 0)\n",
-    "   \\]\n",
-    "\n",
-    "This derivation shows that the proximal operator for the \\(L1\\) norm indeed corresponds to a thresholding function, often referred to as the soft thresholding function.\n",
+    "   $$\n",
     "\n"
    ]
   },
@@ -264,7 +268,7 @@
     "\\mathcal{L}(\\mathbf{m}, \\mathbf{Z}, \\mathbf{u}) = \\frac{1}{2} \\| F(\\mathbf{m}) - d_{obs} \\|_2^2 + \\frac{\\alpha}{2} \\| \\nabla \\mathbf{Z} \\|_2^1 + \\beta \\sum_{j=1}^{N_c} \\sum_{i=1}^{N_x N_z} Z_{ji} (m_i - c_j)^2 + \\frac{\\gamma}{\\lambda} \\| \\mathbf{m} - \\mathbf{Z} + \\mathbf{u} \\|_2^2\n",
     "$$\n",
     "\n",
-    "This looks a bit gnarly but its simplifies nicely into a unsupervised segmentation method for the minimization of the $\\mathbf{Z}$ variable. First lets form our ADMM functionals:\n",
+    "This looks a bit gnarly but its simplifies nicely into a optimization problem resulting in a segmentation method for the minimization of the $\\mathbf{Z}$ variable. First lets form our ADMM functionals:\n",
     "\n",
     "$$\n",
     "f(\\mathbf{m}) = \\frac{1}{2} \\| F(\\mathbf{m}) - d_{obs} \\|_2^2  + \\frac{\\gamma}{2\\lambda} \\| \\mathbf{m} - \\mathbf{Z} + \\mathbf{u} \\|_2^2\n",
